kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  labels:
    app: devsecops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      # 🚀 এই লাইনটি তোমার তৈরি করা IAM Service Account-কে পডের সাথে যুক্ত করবে
      serviceAccountName: devsecops-app-sa 
      containers:
      - name: devsecops-container
        image: 800557028391.dkr.ecr.ap-south-1.amazonaws.com/devsecops-app:v3
        imagePullPolicy: Always
        ports:
          - containerPort: 8003 
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        
        # এখানে কোনো হার্ডকোডেড AWS Key দেওয়ার দরকার নেই, টোকেন দিয়ে কাজ হবে
        readinessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 30
          periodSeconds: 15
