kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: devsecops-alb
    alb.ingress.kubernetes.io/discover-subnets: "true"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:800557028391:certificate/589dd93a-c66c-4705-9592-0825de635fa2
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
    - host: findmyproject.com
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: devsecops-service   
                port:
                  number: 80             

          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: devsecops-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops-service
                port:
                  number: 80
